--- a/index.html
+++ b/index.html
@@ -33,25 +33,22 @@
 						</p>
 					</div>
 				</div>
-
-				<div class="card">
-					<div class="card-block">
-						<h4 class="card-title">Skills</h4>
-						<p>
-							Peace
-							<progress class="progress progress-success" value="100" max="100">100%</progress>
-						</p>
-						<p>
-							Love
-							<progress class="progress progress-info" value="100" max="100">100%</progress>
-						</p>
-					</div>
-				</div>
 			</div>
 
 			<div class="col-md-8">
-				<h1 class="header">Let your mind wonder</h1>
-				<iframe width="400" height="300" src="https://www.youtube.com/embed/hHW1oY26kxQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<h1 class="header">lofi hip hop radio</h1>
+				<div class="row">
+					<div class="col-md-6">
+				<iframe width="350" height="200" src="https://www.youtube.com/embed/hHW1oY26kxQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="350" height="200" src="https://www.youtube.com/embed/5AEbq6X33A8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="350" height="200" src="https://www.youtube.com/embed/6rReMbO42uE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+					<div class="col-md-6">
+						<iframe width="350" height="200" src="https://www.youtube.com/embed/rLMHGjoxJdQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe width="350" height="200" src="https://www.youtube.com/embed/2ccaHpy5Ewo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe width="350" height="200" src="https://www.youtube.com/embed/TYCBicKyVhs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>	
